# multi-agent-ai-system

./: .env.example  README.md  pyproject.toml
src/multi_agent_system/: crew.py  main.py
src/multi_agent_system/config/: agents.yaml  tasks.yaml
src/multi_agent_system/tools/: __init__.py  discord_delivery_tool.py  discord_feedback_tool.py  google_calendar_busy_periods_tool.py  spotify_user_preference_tool.py  tmdb_content_search_tool.py  tmdb_user_preference_tool.py
task_output_example/: analyze_calendar_time_slots.json  analyze_user_spotify_preferences.json  analyze_user_tmdb_preferences.json  collect_discord_feedback.json  discord_delivery.md  format_recommendations.md  search_tmdb_content.json  synthesize_content_recommendations.json
