[project]
name = "multi_agent_system"
version = "0.1.0"
description = "multi_agent_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pytz>=2023.3",
    "python-dateutil>=2.8.2",
    "discord.py>=2.3.0"
]

[project.scripts]
multi_agent_system = "multi_agent_system.main:run"
run_crew = "multi_agent_system.main:run"
train = "multi_agent_system.main:train"
replay = "multi_agent_system.main:replay"
test = "multi_agent_system.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
